add club ethos main structure

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +10,11 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Running</title>
 </head>
+
 <body>
     <header>
         <a href="index.html">
-            <h1 id="logo">
-                Love Running
-            </h1>
+            <h1 id="logo">Love Running</h1>
         </a>
         <nav>
             <ul id="menu">
@@ -24,7 +24,6 @@
                 <li>
                     <a href="#">Gallery</a>
                 </li>
-               
                 <li>
                     <a href="index.html" class="active">Home</a>
                 </li>
@@ -33,9 +32,16 @@
     </header>
     <section id="hero-outer">
         <div id="hero-image"></div>
+        <div id="cover-text">
+            <h2>Love Running</h2>
+            <h3>Dublin Docklands & Phoenix Park</h3>
+        </div>
     </section>
-    <section>
-        Club Ethos
+    <section id="club-ethos">
+        <h1>Why Love Running with us?</h1>
+        <div id="left-about">Left</div>
+        <div id="right-about">Right</div>
+        <div id="center-about">Center</div>
     </section>
     <section>
         Running locations, distances and times
@@ -44,4 +50,5 @@
         social links here
     </footer>
 </body>
+
 </html>
